fix(perc-system): type xml/extension/relationship/webdav rawtypes (#2935) (#2945)
PR-sized -Xlint residual under parent #2877 / epic #2022:
- relationship/effect: typed Maps, Lists, Iterators, category Set
- xml: PSDtdBuilder/Attribute/catalog hierarchy, XPath, stylesheet cache
- extension: database-function maps, resource catalogs, JS helpers
- webdav: config maps and PropFind/PropPatch lists

Behavioral tests: PSXmlExtensionRelationshipWebdavTypedTest (6).
system clean install: Tests run 1703, Failures 0.

Fixes #2935

> Co-Authored by Grok Build using grok-4.5 with agent main.